# optiframe

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py
examples/knapsack/: __init__.py  base_module.py  base_package.py  conflict_module.py  conflict_package.py
examples/knapsack/base_package/: __init__.py  build_mip.py  data.py  extract_solution.py  validate.py
optiframe/: __init__.py
optiframe/framework/: __init__.py  default_tasks.py  errors.py  metrics.py  optimizer.py  tasks.py
optiframe/workflow_engine/: __init__.py  errors.py  step.py  task.py  workflow.py
tests/: __init__.py  test_knapsack.py
tests/framework/: __init__.py  test_metrics.py
tests/workflow_engine/: __init__.py  test_task.py
