[tool.poetry]
name = "optiframe"
version = "0.1.0"
description = "A modular framework for mixed integer programming"
authors = ["Tim Jentzsch <optiframe.projects@timjen.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TimJentzsch/optiframe"

[tool.poetry.dependencies]
python = "^3.10"
pulp = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
