[tool.poetry]
name = "optiframe"
version = "0.1.0"
description = "A modular framework for mixed integer programming"
authors = ["Tim Jentzsch <optiframe.projects@timjen.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TimJentzsch/optiframe"

[tool.poetry.dependencies]
python = "^3.11"
pulp = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
ruff = "^0.0.254"
mypy = "^1.1.1"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
