[tool.poetry]
name = "optiframe"
version = "0.5.0"
description = "A modular framework for mixed integer programming."
authors = ["Tim Jentzsch <optiframe.projects@timjen.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TimJentzsch/optiframe"
exclude = ["examples", "tests"]

[tool.poetry.scripts]
knapsack = "examples.knapsack:demo"

[tool.poetry.dependencies]
python = ">=3.11.0rc1"
pulp = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
ruff = "^0.0.254"
mypy = "^1.1.1"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "D", "I"]
ignore = [
    # multi-line-summary-second-line
    # Collides with other lint rule and is non-standard
    "D213",
    # one-blank-line-before-class
    # Collides with other lint rule and is non-standard
    "D203",
    # undocumented-public-init
    # Often just repeats the class name and doesn't really add new information
    "D107"
]

[tool.mypy]
python_version = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
